Fixing issue with logo on mobile screens causing too-wide websiteness.

--- a/assets/stylesheets/layout/_panel-details.scss
+++ b/assets/stylesheets/layout/_panel-details.scss
@@ -17,3 +17,10 @@
 		float: right;
 	}
 }
+
+@include mobile {
+	#extra-info .wrap .col {
+		float: none;
+		width: 100%;
+	}
+}
